--- a/sakila/hooks/build
+++ b/sakila/hooks/build
@@ -2,4 +2,4 @@
 echo ${sakila_file}
 echo ${db_name}
 echo ${DOCKERFILE_PATH}
-docker build --build-arg sakila_file=${sakila_file} db_name=${db_name} -f $DOCKERFILE_PATH -t $IMAGE_NAME .
+docker build --build-arg sakila_file=${sakila_file} --build-arg db_name=${db_name} -f $DOCKERFILE_PATH -t $IMAGE_NAME .
